fix overflow in style.css

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ html {
 body {
   color: var(--text);
   background: var(--background);
-  height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 header {
   height: 10vh;
@@ -26,7 +27,7 @@ header {
   justify-content: center;
 }
 main {
-  height: 90vh;
+  height: 80vh;
 }
 .search-block {
   display: flex;
@@ -143,6 +144,8 @@ main {
   font-weight: 400;
 }
 footer {
+  margin-top: 4rem;
+  height: 10vh;
   padding: 0.5rem;
   text-align: center;
   font-size: 1rem;
